--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,11 @@
-apify-client>=1.7.0
-requests>=2.31.0
+# Core dependencies for local scraping
+playwright>=1.40.0
 python-dotenv>=1.0.0
+
+# Data processing and export
+pandas>=2.0.0
+openpyxl>=3.1.0  # For Excel export
+
+# Optional: For advanced features
+beautifulsoup4>=4.12.0  # If you need HTML parsing
+lxml>=4.9.0  # Faster HTML parsing
